--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.12.4",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
