--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
-    "streetsidesoftware.code-spell-checker-spanish"
+    "streetsidesoftware.code-spell-checker-spanish",
+    "yoavbls.pretty-ts-errors"
   ]
 }
